# BorderSpace

./: .gitignore  CMakeLists.txt  Collider.cpp  Collider.h  HUD.cpp  HUD.h  Value_Object.cpp  Value_Object.h  animate_fragment_shader.glsl  arm1.cpp  arm1.h  audio_manager.cpp  audio_manager.h  bar.cpp  bar.h  bar_fragement_shader.glsl  blue_game_object.cpp  blue_game_object.h  child_vertex_shader.glsl  circle.cpp  circle.h  collectible_game_object.cpp  collectible_game_object.h  drawing_fragment_shader.glsl  drawing_game_object.cpp  drawing_game_object.h  effect.cpp  effect.h  enemy_game_object.cpp  enemy_game_object.h  expo_obj.cpp  expo_obj.h  fortress_object.cpp  fortress_object.h  fortress_shooter.cpp  fortress_shooter.h  game.cpp  game.h  game_object.cpp  game_object.h  (+37 more)
textures/aspire/: Energy_bar.aseprite  HP_bar.aseprite  IP+E+I+C (16 x 16).aseprite  Triple_Shot_Blue-Sheet.aseprite  arm1.aseprite  arm2.aseprite  boss.aseprite  bricks.aseprite  exp.aseprite  exp_bar.aseprite  fortress_shooter.aseprite  level.aseprite  monster.aseprite  ridar.aseprite  shield.aseprite  test.aseprite
